Fixed overflow for mobile devices - try 2

--- a/custom.css
+++ b/custom.css
@@ -18,5 +18,9 @@
 }
 
 html, body {
-  overflow-x:hidden 
+  overflow-x: hidden; 
+}
+
+body {
+  position: relative;
 }
